attempt to update midscribe project to newest midpoint (+ midpoint parent)